src/components/blocks/BlockItem.css
.block-item {
  position: relative;
  min-width: var(--block-min-width);
}

.block-controls {
  position: absolute;
  right: calc(var(--space-4) * -1);
  top: 50%;
  transform: translateX(100%) translateY(-50%);
  display: flex;
  flex-direction: row;
  gap: var(--space-2);
  opacity: 0;
  transition: opacity var(--transition-base);
}

.block-drag-handle {
  position: absolute;
  left: calc(var(--space-4) * -1);
  top: 50%;
  transform: translateX(-100%) translateY(-50%);
  display: flex;
  flex-direction: column;
  gap: var(--space-2);
  opacity: 0;
  transition: opacity var(--transition-base);
}

.block-item:hover :is(.block-controls, .block-drag-handle) {
  opacity: 1;
}

body.read-mode :is(.block-controls, .block-drag-handle) {
  display: none;
}

body.ctrl-held:not(.read-mode) :is(.block-controls, .block-drag-handle) {
  opacity: 0;
  pointer-events: none;
}

body.ctrl-held:not(.read-mode) .block-item:hover:not(.block-selected) {
  outline: var(--border-dashed);
  border-radius: var(--radius-lg);
}

.block-selected:not(.drag-over)
  :is(.command-block, .note-block, .divider-block) {
  user-select: none;
  outline: var(--space-1) solid var(--accent);
}

.block-item.drag-over {
  border-radius: var(--radius-lg);
}

@keyframes duplicate-flash {
  0% {
    outline: var(--space-1) solid var(--accent);
    outline-offset: var(--space-2);
  }

  100% {
    outline: var(--space-3) solid transparent;
    outline-offset: var(--space-2);
  }
}

.block-item.duplicate-flash {
  animation: duplicate-flash 0.5s ease-out forwards;
}

